# data-workflow-01

./: .gitignore  README.md  SOLUTION.md  docker-compose.yaml
.github/workflows/: cicd.yml
images/: erd.txt
infra/: main.tf  userdata.tpl  variables.tf
modules/de/: Dockerfile  IMPLEMENTATION.md
modules/de/dags/: dag_customer_data_ingestion.py  dag_feature_store_processing.py  dag_load_client_data.py  dag_load_sales_data.py  dag_process_data.py  dag_sales_data_processing.py
modules/de/dags/sql/customers_workflow/: customer_activity_table.sql  customer_profiles_table.sql  labels_table.sql
modules/de/dags/sql/feature_store_workflow/: feature_store_table.sql
modules/de/dags/sql/sales_workflow/: monthly_sales_table.sql  sales_table.sql  store_locations_table.sql
modules/de/dags/tasks/: s3_file_download.py
modules/de/db_admin/: setup_users.sql
modules/de/docker/: Dockerfile
modules/deployment/: IMPLEMENTATION.md  example_request.py
modules/deployment/api/: .gitignore  app copy.py  app.py  entrypoint.sh  tinkering.py  tinkering_flask.py
modules/deployment/docker/: Dockerfile
modules/deployment/tests/: test_api.py
modules/ds/: .gitignore  EXTRA_TASKS.md  README.md  main.py
modules/ds/docker/: Dockerfile
modules/ds/ds_package/: README.md  pyproject.toml  setup.cfg
modules/ds/ds_package/src/data_science/: fetch_data.py  modelling.py
modules/ds/models/: model.pkl  one_hot_encoder.pkl
modules/mle/: .gitignore  EXTRA_TASKS.md  README.md
modules/mle/mle_package/: README.md  pyproject.toml  setup.cfg
(+1 files in other folders)
